--- a/.chroniclerc
+++ b/.chroniclerc
@@ -97,7 +97,7 @@ format = markdown
 #  no-tags     = 1
 #  no-xrefs    = 1
 #  no-archive  = 1
-#  no-calendar = 1
+no-calendar = 1
 no-comments = 1
 #
 
