Update paths to match github repo name

--- a/.chroniclerc
+++ b/.chroniclerc
@@ -25,7 +25,7 @@
 #
 #  Input directory where the blog entries are read from.
 #
-input = /home/nhandler/src/blog/input
+input = /home/nhandler/src/blog.nhandler.com/input
 
 
 #
@@ -38,7 +38,7 @@ pattern = *.txt
 #
 #  The directory to write the formatted blog output to.
 #
-output = /home/nhandler/src/blog/output
+output = /home/nhandler/src/blog.nhandler.com/output
 
 
 #
@@ -143,7 +143,7 @@ blog_title    = Nathan Handler's Blog
 #
 #  A command to run post-build.
 #
-post-build = /home/nhandler/src/blog/sftp "people.ubuntu.com" "/home/nhandler/src/blog/output" "public_html/blog/"
+post-build = /home/nhandler/src/blog.nhandler.com/sftp "people.ubuntu.com" "/home/nhandler/src/blog.nhandler.com/output" "public_html/blog/"
 
 
 #
